--- a/web/web-pom/pom.xml
+++ b/web/web-pom/pom.xml
@@ -1,20 +1,19 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>com.liuyu.learn</groupId>
-	<artifactId>pom-parent</artifactId>
+	<groupId>com.liuyu.web</groupId>
+	<artifactId>web-pom</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>pom</packaging>
-	
-	<organization>
-		<name>com.liuyu</name>
-    </organization>
 
-	<name>pom-parent</name>
+	<name>web-pom</name>
 	<url>http://maven.apache.org</url>
 
 	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<junit-version>4.11</junit-version>
 		<spring-version>3.2.3.RELEASE</spring-version>
 		<spring-data-version>1.4.2.RELEASE</spring-data-version>
 		<spring-sec-version>3.1.4.RELEASE</spring-sec-version>
@@ -27,8 +26,7 @@
 		<aspect-version>1.7.0</aspect-version>
 		<logback-version>1.0.1</logback-version>
 		<webdriver-version>2.21.0</webdriver-version>
-		<venus-version>3.0.3</venus-version>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<servlet-api-version>3.1.0</servlet-api-version>
 	</properties>
 
 	<dependencyManagement>
@@ -51,6 +49,18 @@
 				<groupId>commons-dbcp</groupId>
 				<artifactId>commons-dbcp</artifactId>
 				<version>1.2.2</version>
+			</dependency>
+			<dependency>
+				<groupId>junit</groupId>
+				<artifactId>junit</artifactId>
+				<version>${junit-version}</version>
+				<scope>test</scope>
+			</dependency>
+			<dependency>
+				<groupId>org.testng</groupId>
+				<artifactId>testng</artifactId>
+				<version>6.4</version>
+				<scope>test</scope>
 			</dependency>
 			<!-- Spring -->
 			<dependency>
@@ -87,19 +97,12 @@
 				<version>${spring-data-version}</version>
 			</dependency>
 	
-			<!-- validator -->
-			<dependency>
-				<groupId>org.hibernate</groupId>
-				<artifactId>hibernate-validator</artifactId>
-				<version>4.2.0.Final</version>
-			</dependency>
-			<dependency>
-				<groupId>javax.validation</groupId>
-				<artifactId>validation-api</artifactId>
-				<version>1.0.0.GA</version>
-			</dependency>
-	
 			<!-- j2ee -->
+			<dependency>
+				<groupId>javax.servlet</groupId>
+				<artifactId>javax.servlet-api</artifactId>
+				<version>${servlet-api-version}</version>
+			</dependency>
 			<dependency>
 				<groupId>org.apache.tomcat</groupId>
 				<artifactId>tomcat-servlet-api</artifactId>
@@ -139,7 +142,18 @@
 				<version>4.2.7.Final</version>
 			</dependency>
 			            
-	
+			<!-- validator -->
+			<dependency>
+				<groupId>org.hibernate</groupId>
+				<artifactId>hibernate-validator</artifactId>
+				<version>4.2.0.Final</version>
+			</dependency>
+			<dependency>
+				<groupId>javax.validation</groupId>
+				<artifactId>validation-api</artifactId>
+				<version>1.0.0.GA</version>
+			</dependency>
+
 			<!-- logging related -->
 			<dependency>
 				<groupId>org.slf4j</groupId>
@@ -177,81 +191,16 @@
 				<version>${logback-version}</version>
 				<scope>runtime</scope>
 			</dependency>
+
 			<dependency>
-				<groupId>org.logback-extensions</groupId>
-				<artifactId>logback-ext-parent</artifactId>
-				<version>0.1.1</version>
-			</dependency>
-			<!-- venus -->
-			<dependency>
-                <groupId>com.meidusa.venus</groupId>
-                <artifactId>venus-client</artifactId>
-                <version>${venus-version}</version>
-            </dependency>
-            <dependency>
-                <groupId>com.meidusa.venus.commons</groupId>
-                <artifactId>venus-common-exception</artifactId>
-                <version>${venus-version}</version>
-            </dependency>
-            <dependency>
-			   <groupId>com.meidusa.venus</groupId>
-			   <artifactId>venus-backend</artifactId>
-			   <version>${venus-version}</version>
-             </dependency>
-             <!-- for venus end -->
-             
-			<dependency>
-				<groupId>org.testng</groupId>
-				<artifactId>testng</artifactId>
-				<version>6.4</version>
-				<scope>test</scope>
-			</dependency>
-			<dependency>
-				<groupId>junit</groupId>
-				<artifactId>junit</artifactId>
-				<version>4.10</version>
-				<scope>test</scope>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-webmvc</artifactId>
+				<version>${spring-version}</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
-	<build>
-  		<plugins>
-  			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>2.3.2</version>
-				<configuration>
-					<source>1.7</source>
-					<target>1.7</target>
-					<encoding>UTF-8</encoding>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-javadoc-plugin</artifactId>
-				<version>2.7</version>
-				<executions>
-					<execution>
-						<id>attach-javadocs</id>
-						<goals>
-							<goal>jar</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
-				<inherited>true</inherited>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-source-plugin</artifactId>
-				<executions>
-					<execution>
-						<id>attach-sources</id>
-						<goals>
-							<goal>jar</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-  		</plugins>
-  </build>
+	<modules>
+		<module>spring-mvc</module>
+		<module>spring-jdbc</module>
+	</modules>
 </project>
