--- a/java-basic/java-basic/pom.xml
+++ b/java-basic/java-basic/pom.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
@@ -9,14 +8,14 @@
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
 
-	<groupId>com.liuyu.opensource</groupId>
-	<artifactId>opensource-apache</artifactId>
+	<groupId>com.liuyu.java</groupId>
+	<artifactId>java-basic</artifactId>
 	<packaging>pom</packaging>
 
-	<name>opensource-apache</name>
+	<name>java-basic</name>
 	<url>http://maven.apache.org</url>
-	
+
 	<modules>
-		<module>opensource-apache-common</module>
+		<module>java-basic-se</module>
 	</modules>
 </project>
