--- a/pom-parent/pom.xml
+++ b/pom-parent/pom.xml
@@ -26,10 +26,18 @@
 		<logback-version>1.0.1</logback-version>
 		<webdriver-version>2.21.0</webdriver-version>
 		<servlet-api-version>3.1.0</servlet-api-version>
+		
+		<liuyu-common-version>0.0.1-SNAPSHOT</liuyu-common-version>
 	</properties>
 
 	<dependencyManagement>
 		<dependencies>
+			<!-- com.liuyu lib -->
+			<dependency>
+				<groupId>com.liuyu.common</groupId>
+				<artifactId>common-utils</artifactId>
+				<version>${liuyu-common-version}</version>
+			</dependency>
 			<!-- freemarker -->
 			<dependency>
 				<groupId>org.freemarker</groupId>
