add fastjson use case

--- a/java-basic/java-basic/java-basic-se/pom.xml
+++ b/java-basic/java-basic/java-basic-se/pom.xml
@@ -29,5 +29,9 @@
 			<artifactId>junit</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+	        <groupId>com.meidusa.toolkit</groupId>
+	        <artifactId>fastjson</artifactId>
+	    </dependency>
 	</dependencies>
 </project>
