--- a/pom-parent/pom.xml
+++ b/pom-parent/pom.xml
@@ -26,6 +26,7 @@
 		<logback-version>1.0.1</logback-version>
 		<webdriver-version>2.21.0</webdriver-version>
 		<servlet-api-version>3.1.0</servlet-api-version>
+		<fastjson-version>1.3.17</fastjson-version>
 		
 		<liuyu-common-version>0.0.1-SNAPSHOT</liuyu-common-version>
 	</properties>
@@ -199,6 +200,12 @@
 				<scope>runtime</scope>
 			</dependency>
 
+			<dependency>
+				<groupId>com.meidusa.toolkit</groupId>
+				<artifactId>fastjson</artifactId>
+				<version>${fastjson-version}</version>
+			</dependency>
+			
 			<dependency>
 				<groupId>org.springframework</groupId>
 				<artifactId>spring-webmvc</artifactId>
