--- a/component/apache/pom.xml
+++ b/component/apache/pom.xml
@@ -3,14 +3,12 @@
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>com.liuyu.opensource</groupId>
-    <artifactId>opensource-apache</artifactId>
+    <groupId>com.liuyu.component</groupId>
+    <artifactId>component</artifactId>
     <version>0.0.1-SNAPSHOT</version>
   </parent>
-  <groupId>com.liuyu.opensource</groupId>
-  <artifactId>opensource-apache-common</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  <name>opensource-apache-common</name>
+  <artifactId>apache</artifactId>
+  <name>apache</name>
   <url>http://maven.apache.org</url>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -19,7 +17,6 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
