--- a/pom-parent/pom.xml
+++ b/pom-parent/pom.xml
@@ -27,6 +27,7 @@
 		<webdriver-version>2.21.0</webdriver-version>
 		<servlet-api-version>3.1.0</servlet-api-version>
 		<fastjson-version>1.3.17</fastjson-version>
+		<jedis-version>2.6.0</jedis-version>
 		
 		<liuyu-common-version>0.0.1-SNAPSHOT</liuyu-common-version>
 	</properties>
@@ -210,6 +211,14 @@
 				<groupId>org.springframework</groupId>
 				<artifactId>spring-webmvc</artifactId>
 				<version>${spring-version}</version>
+			</dependency>
+			
+			<dependency>
+			    <groupId>redis.clients</groupId>
+			    <artifactId>jedis</artifactId>
+			    <version>${jedis-version}</version>
+			    <type>jar</type>
+			    <scope>compile</scope>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
